--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 	
 }
 #header-content{
-	height: 60vh;
+	height: 40vh;
 	background-color: lightblue;
 	margin:  0;
 	padding: 0;
@@ -72,4 +72,7 @@
 }
 .content-img> img{
 	max-width: 300px;
+}
+#container-404 > img{
+	max-height: 30vh;
 }
